--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unicorn": "^36.0.0",
-    "jest": "^27.0.6",
     "husky": "^7.0.2",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "axios": "^0.22.0",
@@ -88,7 +89,7 @@
   },
   "lint-staged": {
     "./src/**/*.ts": [
-      "yarn run lint",
+      "npm run lint",
       "git add"
     ]
   }
