--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.1.0",
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
     "lodash": "^4.17.21",
     "random-useragent": "^0.5.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
