--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -61,6 +61,7 @@
     "@nestjs/swagger": "^5.1.0",
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
+    "class-validator": "^0.13.1",
     "lodash": "^4.17.21",
     "random-useragent": "^0.5.0",
     "reflect-metadata": "^0.1.13",
@@ -74,7 +75,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|test)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
