--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "author": "Alexey Dvoretsky",
   "description": "web page scraping",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "build:webpack": "webpack",
+    "build": "rimraf dist && nest build",
+    "build:webpack": "rimraf dist && nest build --webpack",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -54,9 +53,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
-    "webpack": "^5.61.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack": "^5.61.0"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
